<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.CreateAccountActivity">

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"/>

    <!-- Campo de texto para el nombre -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCreateAccount"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/editTextBirthDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_birth_date"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:drawableEnd="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        android:padding="16dp"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <!-- Botón de registro -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="@id/editTextName"
        app:layout_constraintEnd_toEndOf="@id/editTextName"
        app:layout_constraintTop_toBottomOf="@id/editTextBirthDate"
        android:layout_marginTop="24dp"/>

    <!-- Botón para ir a la pantalla de inicio de sesión -->
    <Button
        android:id="@+id/buttonGoToLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_go_to_login"
        android:textColor="@color/purple_500"
        android:background="@drawable/button_transparent_background"
        app:layout_constraintStart_toStartOf="@id/buttonRegister"
        app:layout_constraintEnd_toEndOf="@id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
